# PayGate

./: README.md  package-lock.json
.github/workflows/: ci.yml
apps/web/: package.json
apps/web/prisma/: seed.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(app)/apis/: page.tsx
apps/web/src/app/(app)/apis/[id]/: page.tsx
apps/web/src/app/(app)/apis/new/: page.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/settings/: page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/api/playground/[slug]/: route.ts
apps/web/src/app/directory/: layout.tsx  page.tsx
apps/web/src/app/docs/[slug]/: page.tsx
apps/web/src/app/guide/: page.tsx
apps/web/src/app/marketplace/: page.tsx
apps/web/src/components/: CopyEndpointChip.tsx  EarningsChart.tsx  LiveFeed.tsx  PublicNav.tsx  TopCallers.tsx
apps/web/src/components/AppShell/: AppSidebar.tsx  MobileNav.tsx
apps/web/src/components/Playground/: PlaygroundClient.tsx
apps/web/src/components/Settings/: SettingsForm.tsx
apps/web/src/components/ui/: button.tsx  switch.tsx  toast.tsx
apps/web/src/lib/: ratelimit.ts  utils.ts
apps/web/src/lib/auth/: session.ts  verify-stellar.ts
apps/web/src/lib/db/: apis.ts
apps/web/src/lib/stellar/: signer.ts  soroban.ts  wallet-kit.ts
apps/web/src/lib/x402/: facilitator.ts  middleware.ts  pricing.ts
apps/web/src/server/actions/: api-actions.ts
contracts/: Cargo.toml
contracts/receipt-verifier/src/: lib.rs  test.rs
contracts/receipt-verifier/test_snapshots/test/: rejects_duplicate_receipt_in_same_ledger.1.json
(+2 files in other folders)
