[workspace]
members = ["receipt-verifier"]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "debuginfo"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
overflow-checks = true
debug-assertions = true
